@@ -3,25 +3,16 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>481 65 356 303 0 0 1440 878 </string>
+	<string>598 19 356 240 0 0 1440 878 </string>
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>29</key>
-		<string>118 308 324 44 0 0 1440 878 </string>
+		<string>77 732 324 44 0 0 1440 878 </string>
 	</dict>
 	<key>IBFramework Version</key>
 	<string>443.0</string>
-	<key>IBLockedObjects</key>
-	<array>
-		<integer>281</integer>
-		<integer>280</integer>
-		<integer>262</integer>
-	</array>
-	<key>IBOldestOS</key>
-	<integer>2</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>21</integer>
 		<integer>29</integer>
 	</array>
 	<key>IBSystem Version</key>
